--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ apps/static/assets/node_modules
 apps/static/assets/yarn.lock
 apps/static/assets/.temp
 
+Analytics/data/access3.csv
+.gitignore
+Analytics/data/webserver.csv
